# sentry-loader

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: main.rs  sentry_client.rs  sentry_dsn_builder.rs  template_files.rs
templates/: js-sdk-loader.js.tmpl  js-sdk-loader.min.js.tmpl
