[package]
name = "sentry-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
reqwest = { version = "0.12.4", features = ["json"]}
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
log = { version = "0.4.21" }
pretty_env_logger = { version = "0.5.0" }